--- a/src/config.json
+++ b/src/config.json
@@ -62,9 +62,10 @@
   "FP_IO_HLENGTH": 2,
   "FP_IO_VLENGTH": 2,
 
-  "FP_PDN_VOFFSET": 1.5,
-  "FP_PDN_VSPACING": 20,
-  "FP_PDN_VPITCH": 38.87,
+  "FP_PDN_VOFFSET": 1.04,
+  "FP_PDN_VPITCH": 16,
+  "FP_PDN_VSPACING": 6.4,
+  "FP_PDN_VERTICAL_LAYER": "met2",
 
   "//": "Use alternative efabless decap cells to solve LI density issue",
   "DECAP_CELL": [
@@ -80,7 +81,7 @@
 
   "//": "Don't use power rings or met5 layer",
   "DESIGN_IS_CORE": 0,
-  "RT_MAX_LAYER": "met4",
+  "RT_MAX_LAYER": "met2",
 
   "//": "MAGIC_DEF_LABELS may cause issues with LVS",
   "MAGIC_DEF_LABELS": 0,
